# rubi_client

./: README.md
blackpill-template/: .mxproject  Makefile  program.bash  template.ioc
blackpill-template/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_def.h
blackpill-template/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
blackpill-template/Src/: main.c  main.c.old  stm32f1xx_hal_msp.c  stm32f1xx_it.c
linux-socketcan-template/: CMakeLists.txt
linux-socketcan-template/src/: main.c
linux-socketcan-template/tests/: simple_test.cpp
rubi/: .clang-format
rubi/inc/: protocol_defs.h  rubi.h  rubi_autodefs.h  rubi_auxiliary.h  rubi_can.h  rubi_capabilities_enumerator.h  rubi_internals.h  rubi_protocol.h
rubi/src/: rubi.c  rubi_autodefs.c  rubi_capabilities_enumerator.c  rubi_protocol.c
rubi/src_linux_socketcan/: exceptions.h  rubi_auxiliary.cpp  rubi_can.cpp  socketcan.cpp  socketcan.h
rubi/src_stm32f0xx/: rubi_auxiliary.c  rubi_can.c
rubi/src_stm32f1xx/: rubi_auxiliary.c  rubi_can.c
rubi/src_stm32f4xx/: rubi_auxiliary.c  rubi_can.c
